# dengue-heatmap-api

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0b064b851b70_pivot_to_infodengue_schema_with_.py  12685d2fd5cf_altera_state_uf_string_para_state_code_.py  f6a5da26452d_create_initial_tables_dengue_aggregates_.py
src/app/: main.py
src/app/api/: api.py
src/app/api/endpoints/: health.py  map.py  reports.py  sync.py
src/app/core/: config.py  scheduler.py
src/app/db/: session.py
src/app/models/: models.py
src/app/schemas/: reports.py
src/app/scripts/: backfill_infodengue.py  seed_territories.py
src/app/services/: infodengue_sync.py  map_service.py
