[tool.poetry]
name = "dengue-api"
version = "0.1.0"
description = "API para monitoramento de casos de dengue usando pysus e FastAPI"
authors = ["Seu Nome <seu_email@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# Core API
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"

# Banco de Dados
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"

# Ingestão de Dados
pysus = "^0.6.0"      # (Podemos remover, mas por enquanto está aqui)
pandas = "^2.2.0"
httpx = "^0.27.0"     # (Adicionado para o InfoDengue)

# Geo e Mapas
geopandas = "^0.14.0"
folium = "^0.16.0"

# Agendamento
apscheduler = "^3.10.0"

# Utilitários
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
black = "^24.4.0"
ruff = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"